Re-organize imports

--- a/notebooks/上傳檔案到 NodeMCU (Upload files to NodeMCU).ipynb
+++ b/notebooks/上傳檔案到 NodeMCU (Upload files to NodeMCU).ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -110,15 +110,19 @@
      "text": [
       "Copying boot.py\n",
       "Copying hardware.py\n",
+      "Copying hardware_esp8266.py\n",
+      "Copying hardware_pc.py\n",
       "Copying led.py\n",
       "Copying main.py\n",
+      "Copying profiler.py\n",
       "Copying u_python.py\n",
       "Copying watchdog.py\n",
       "Copying webrepl_cfg.py\n",
       "Copying node.py\n",
-      "Copying node_config.py\n",
       "Copying socket_client.py\n",
       "Copying worker.py\n",
+      "Copying worker_config.py\n",
+      "Copying worker_cpython.py\n",
       "Copying worker_upython.py\n",
       "Copying commander.py\n",
       "Copying config.py\n",
@@ -145,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -154,13 +158,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Copying worker.py\n"
+      "Copying worker_upython.py\n"
      ]
     }
    ],
    "source": [
     "folder = '..\\\\codes\\\\node'\n",
-    "files = ['worker.py'] \n",
+    "files = ['worker_upython.py'] \n",
     "         \n",
     "for file in files:\n",
     "    print('Copying {0}'.format(file))\n",
