--- a/notebooks/上傳檔案到 NodeMCU (Upload files to NodeMCU).ipynb
+++ b/notebooks/上傳檔案到 NodeMCU (Upload files to NodeMCU).ipynb
@@ -44,7 +44,7 @@
    "source": [
     "com_port = 'COM12'\n",
     "com_port = 'COM13'\n",
-    "# com_port = 'COM15'\n",
+    "com_port = 'COM15'\n",
     "# com_port = 'COM16'"
    ]
   },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": true
