--- a/notebooks/Elastic Network of Things with MicroPython.ipynb
+++ b/notebooks/Elastic Network of Things with MicroPython.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Plastic Network of Things with MicroPython \n",
+    "# Elastic Network of Things with MicroPython \n",
     "\n",
     "Wei Lin  \n",
     "20170120  "
