Fix bugs and re-organize objects instanciation flow.

--- a/notebooks/上傳檔案到 NodeMCU (Upload files to NodeMCU).ipynb
+++ b/notebooks/上傳檔案到 NodeMCU (Upload files to NodeMCU).ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -36,15 +36,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "com_port = 'COM12'\n",
-    "com_port = 'COM13'\n",
-    "com_port = 'COM15'\n",
+    "# com_port = 'COM13'\n",
+    "# com_port = 'COM15'\n",
     "# com_port = 'COM16'"
    ]
   },
@@ -93,12 +93,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 單一檔案上傳 (single file upload, in case needed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def copy_one_file(folder, file):         \n",
+    "    print('Copying {0}'.format(file))\n",
+    "    !ampy --port {com_port} put {os.path.join(folder, file)}\n",
+    "    \n",
+    "folder = '..\\\\codes\\\\micropython'\n",
+    "file = 'hardware.py'   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Copy 檔案到開發板 (copy files onto ESP8266 / NodeMCU, all needed fils will be put in the same folder)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -108,12 +131,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Deleting main.py\n",
       "Copying boot.py\n",
       "Copying hardware.py\n",
       "Copying hardware_esp8266.py\n",
       "Copying hardware_pc.py\n",
       "Copying led.py\n",
-      "Copying main.py\n",
       "Copying profiler.py\n",
       "Copying u_python.py\n",
       "Copying watchdog.py\n",
@@ -126,49 +149,28 @@
       "Copying worker_upython.py\n",
       "Copying commander.py\n",
       "Copying config.py\n",
-      "Copying data_transceiver.py\n"
+      "Copying data_transceiver.py\n",
+      "Copying main.py\n"
      ]
     }
    ],
    "source": [
     "folders = ['..\\\\codes\\\\micropython', '..\\\\codes\\\\node', '..\\\\codes\\\\shared']\n",
+    "main_filename = 'main.py'\n",
+    "\n",
+    "files = !ampy --port {com_port} ls\n",
+    "\n",
+    "if main_filename in files:\n",
+    "    print('Deleting {0}'.format(main_filename))\n",
+    "    !ampy --port {com_port} rm {main_filename}\n",
     "\n",
     "for folder in folders: \n",
     "    for file in os.listdir(folder):\n",
-    "        if not file.startswith('_'):\n",
+    "        if not file.startswith('_') and not file.startswith(main_filename):\n",
     "            print('Copying {0}'.format(file))\n",
-    "            !ampy --port {com_port} put {os.path.join(folder, file)}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 單一檔案上傳 (single file upload, in case needed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Copying worker_upython.py\n"
-     ]
-    }
-   ],
-   "source": [
-    "folder = '..\\\\codes\\\\node'\n",
-    "files = ['worker_upython.py'] \n",
-    "         \n",
-    "for file in files:\n",
-    "    print('Copying {0}'.format(file))\n",
-    "    !ampy --port {com_port} put {os.path.join(folder, file)}"
+    "            !ampy --port {com_port} put {os.path.join(folder, file)}\n",
+    "            \n",
+    "copy_one_file('..\\\\codes\\\\micropython', main_filename)            "
    ]
   },
   {
