Fix socket connection workflow bug. Add command for running Docker container on Raspberry Pi.

--- a/notebooks/上傳檔案到 NodeMCU (Upload files to NodeMCU).ipynb
+++ b/notebooks/上傳檔案到 NodeMCU (Upload files to NodeMCU).ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -36,14 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "com_port = 'COM12'\n",
-    "com_port = 'COM13'\n",
+    "# com_port = 'COM13'\n",
     "# com_port = 'COM15'\n",
     "# com_port = 'COM16'"
    ]
@@ -93,14 +93,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 單一檔案上傳 (single file upload, in case needed)"
+    "### Functions for copying files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -108,8 +108,19 @@
     "    print('Copying {0}'.format(file))\n",
     "    !ampy --port {com_port} put {os.path.join(folder, file)}\n",
     "    \n",
-    "folder = '..\\\\codes\\\\micropython'\n",
-    "file = 'hardware.py'   "
+    "    \n",
+    "def copy_all_files(folders, main_filename = 'main.py'):\n",
+    "    files = !ampy --port {com_port} ls\n",
+    "\n",
+    "    if main_filename in files:\n",
+    "        print('Deleting {0}'.format(main_filename))\n",
+    "        !ampy --port {com_port} rm {main_filename}\n",
+    "\n",
+    "    for folder in folders: \n",
+    "        for file in os.listdir(folder):\n",
+    "            if not file.startswith('_') and not file.startswith(main_filename):\n",
+    "                print('Copying {0}'.format(file))\n",
+    "                !ampy --port {com_port} put {os.path.join(folder, file)}    "
    ]
   },
   {
@@ -121,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -137,8 +148,8 @@
       "Copying hardware_esp8266.py\n",
       "Copying hardware_pc.py\n",
       "Copying led.py\n",
-      "Copying profiler.py\n",
       "Copying u_python.py\n",
+      "Copying u_python_profiler.py\n",
       "Copying watchdog.py\n",
       "Copying webrepl_cfg.py\n",
       "Copying node.py\n",
@@ -158,30 +169,58 @@
     "folders = ['..\\\\codes\\\\micropython', '..\\\\codes\\\\node', '..\\\\codes\\\\shared']\n",
     "main_filename = 'main.py'\n",
     "\n",
-    "files = !ampy --port {com_port} ls\n",
-    "\n",
-    "if main_filename in files:\n",
-    "    print('Deleting {0}'.format(main_filename))\n",
-    "    !ampy --port {com_port} rm {main_filename}\n",
-    "\n",
-    "for folder in folders: \n",
-    "    for file in os.listdir(folder):\n",
-    "        if not file.startswith('_') and not file.startswith(main_filename):\n",
-    "            print('Copying {0}'.format(file))\n",
-    "            !ampy --port {com_port} put {os.path.join(folder, file)}\n",
+    "copy_all_files(folders, main_filename)\n",
     "            \n",
     "copy_one_file('..\\\\codes\\\\micropython', main_filename)            "
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 單一檔案上傳 (single file upload, in case needed)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Copying config.py\n"
+     ]
+    }
+   ],
    "source": [
-    "# !ampy --port {com_port} put ..\\codes\\micropython\\main.py"
+    "folder = '..\\\\..\\\\dmz'\n",
+    "file = 'config.py' \n",
+    "copy_one_file(folder, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Copying socket_client.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "folder = '..\\\\codes\\\\node'\n",
+    "file = 'socket_client.py' \n",
+    "copy_one_file(folder, file)"
    ]
   },
   {
@@ -232,17 +271,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# !ampy --port {com_port} get socket_client.py"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -286,6 +314,20 @@
    "source": [
     "# Delete all files\n",
     "# import u_python;u_python.del_all_files();import os;os.listdir()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Run Broker container on Raspberry Pi\n",
+    "copy folder 'codes' to Raspberry Pi under folder '/data/elastic_network_of_things_with_micropython',  \n",
+    "so Raspberry Pi has folder '/data/elastic_network_of_things_with_micropython/codes'  \n",
+    "then run the command below on Raspberry Pi.\n",
+    "\n",
+    "```\n",
+    "docker run -it -p 9662:9662 --name=Broker --hostname=Broker --volume=/data/elastic_network_of_things_with_micropython:/project wei1234c/python_armv7 /bin/sh -c \"cd /project/codes/broker && python3 broker.py\" \n",
+    "```"
    ]
   }
  ],
