--- a/notebooks/上傳檔案到 NodeMCU (Upload files to NodeMCU).ipynb
+++ b/notebooks/上傳檔案到 NodeMCU (Upload files to NodeMCU).ipynb
@@ -36,14 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "com_port = 'COM12'\n",
-    "# com_port = 'COM13'\n",
+    "com_port = 'COM13'\n",
     "# com_port = 'COM15'\n",
     "# com_port = 'COM16'"
    ]
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -232,12 +232,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Copying Socket_client.py\n"
+      "Copying worker_config.py\n"
      ]
     }
    ],
    "source": [
-    "copy_one_file('..\\\\codes\\\\node', 'Socket_client.py')"
+    "copy_one_file('..\\\\codes\\\\node', 'worker_config.py')"
    ]
   },
   {
