--- a/notebooks/上傳檔案到 NodeMCU (Upload files to NodeMCU).ipynb
+++ b/notebooks/上傳檔案到 NodeMCU (Upload files to NodeMCU).ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -44,7 +44,7 @@
    "source": [
     "com_port = 'COM12'\n",
     "com_port = 'COM13'\n",
-    "# com_port = 'COM15'\n",
+    "com_port = 'COM15'\n",
     "# com_port = 'COM16'"
    ]
   },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "scrolled": true
