Add worker_neuron, Neural network test.

--- a/notebooks/上傳檔案到 NodeMCU (Upload files to NodeMCU).ipynb
+++ b/notebooks/上傳檔案到 NodeMCU (Upload files to NodeMCU).ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -36,15 +36,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "com_port = 'COM12'\n",
-    "com_port = 'COM13'\n",
-    "com_port = 'COM15'\n",
+    "# com_port = 'COM13'\n",
+    "# com_port = 'COM15'\n",
     "# com_port = 'COM16'"
    ]
   },
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -159,6 +159,7 @@
       "Copying worker.py\n",
       "Copying worker_config.py\n",
       "Copying worker_cpython.py\n",
+      "Copying worker_neuron.py\n",
       "Copying worker_upython.py\n",
       "Copying commander.py\n",
       "Copying config.py\n",
@@ -185,26 +186,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Copying config.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "copy_one_file('..\\\\..\\\\dmz', 'config.py')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -223,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -232,12 +225,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Copying worker_config.py\n"
+      "Copying worker_neuron.py\n"
      ]
     }
    ],
    "source": [
-    "copy_one_file('..\\\\codes\\\\node', 'worker_config.py')"
+    "copy_one_file('..\\\\codes\\\\node', 'worker_neuron.py')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Copying commander.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "copy_one_file('..\\\\codes\\\\shared', 'commander.py')"
    ]
   },
   {
@@ -267,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -278,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
