Fix asynchronous result bugs.

--- a/notebooks/上傳檔案到 NodeMCU (Upload files to NodeMCU).ipynb
+++ b/notebooks/上傳檔案到 NodeMCU (Upload files to NodeMCU).ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -44,7 +44,7 @@
    "source": [
     "com_port = 'COM12'\n",
     "# com_port = 'COM13'\n",
-    "# com_port = 'COM15'\n",
+    "com_port = 'COM15'\n",
     "# com_port = 'COM16'"
    ]
   },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -145,8 +145,6 @@
       "Deleting main.py\n",
       "Copying boot.py\n",
       "Copying hardware.py\n",
-      "Copying hardware_esp8266.py\n",
-      "Copying hardware_pc.py\n",
       "Copying led.py\n",
       "Copying u_python.py\n",
       "Copying u_python_profiler.py\n",
@@ -216,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -225,17 +223,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Copying worker_neuron.py\n"
+      "Copying node.py\n"
      ]
     }
    ],
    "source": [
-    "copy_one_file('..\\\\codes\\\\node', 'worker_neuron.py')"
+    "copy_one_file('..\\\\codes\\\\node', 'node.py')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -244,12 +242,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Copying commander.py\n"
+      "Copying u_python.py\n"
      ]
     }
    ],
    "source": [
-    "copy_one_file('..\\\\codes\\\\shared', 'commander.py')"
+    "copy_one_file('..\\\\codes\\\\micropython', 'u_python.py')"
    ]
   },
   {
