--- a/notebooks/Client Test.ipynb
+++ b/notebooks/Client Test.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -48,12 +48,17 @@
      "text": [
       "My name is Client_366\n",
       "\n",
-      "[connected: ('192.168.0.105', 9662)]\n",
+      "[connected: ('192.168.0.100', 9662)]\n",
       "Sending 305 bytes\n",
       "Message:\n",
-      "OrderedDict([('command', 'set connection name'), ('correlation_id', '2017-01-29 21:57:00.547700'), ('kwargs', {'name': 'Client_366'}), ('message_id', '2017-01-29 21:57:00.547700'), ('need_result', True), ('receiver', 'Hub'), ('reply_to', 'Client_366'), ('sender', 'Client_366'), ('type', 'command')])\n",
+      "OrderedDict([('command', 'set connection name'), ('correlation_id', '2017-01-31 19:19:35.580300'), ('kwargs', {'name': 'Client_366'}), ('message_id', '2017-01-31 19:19:35.580300'), ('need_result', True), ('receiver', 'Hub'), ('reply_to', 'Client_366'), ('sender', 'Client_366'), ('type', 'command')])\n",
       "\n",
-      "[Listen to messages]\n"
+      "[Listen to messages]\n",
+      "\n",
+      "Data received: 399 bytes\n",
+      "Message:\n",
+      "OrderedDict([('correlation_id', '2017-01-31 19:19:35.580300'), ('message_id', '2017-01-31 19:19:35.656300'), ('receiver', 'Client_366'), ('reply_to', 'Hub'), ('result', {'NodeMCU_f1d30800': \"('192.168.0.103', 4592)\", 'NodeMCU_1dsc000': \"('192.168.0.101', 1857)\", 'Client_366': \"('192.168.0.100', 55493)\"}), ('sender', 'Hub'), ('time_stamp', '2017-01-31 19:19:35.656300'), ('type', 'result')])\n",
+      "\n"
      ]
     }
    ],
@@ -71,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -81,6 +86,7 @@
     "\n",
     "messages['read_GPIOs'] = {'type': 'command',\n",
     "                          'command': 'read GPIOs',\n",
+    "                          'kwargs': {'pins': (5, 12, 13, 14, 15, 16)},\n",
     "                          'need_result': True}\n",
     "\n",
     "messages['blink_led'] = {'type': 'command',\n",
@@ -90,23 +96,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Data received: 400 bytes\n",
-      "Message:\n",
-      "OrderedDict([('correlation_id', '2017-01-29 21:57:00.547700'), ('message_id', '2017-01-29 21:57:00.639700'), ('receiver', 'Client_366'), ('reply_to', 'Hub'), ('result', {'NodeMCU_1dsc000': \"('192.168.0.104', 18507)\", 'NodeMCU_f1d30800': \"('192.168.0.103', 5703)\", 'Client_366': \"('192.168.0.105', 51426)\"}), ('sender', 'Hub'), ('time_stamp', '2017-01-29 21:57:00.639700'), ('type', 'result')])\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# messages['write_GPIOs'] = {'type': 'command',\n",
     "                           # 'command': 'write GPIOs',\n",
@@ -134,11 +128,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Data received: 166 bytes\n",
+      "Message:\n",
+      "OrderedDict([('info', 'Just check to see if you are still there. No reply needed.'), ('receiver', 'all workers'), ('sender', 'Hub'), ('type', 'info')])\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "while not the_client.status['Is connected']:            \n",
     "    time.sleep(1)\n",
@@ -147,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -158,12 +164,12 @@
      "text": [
       "Sending 276 bytes\n",
       "Message:\n",
-      "OrderedDict([('command', 'list connections by name'), ('correlation_id', '2017-01-29 21:57:01.066700'), ('message_id', '2017-01-29 21:57:01.066700'), ('need_result', True), ('receiver', 'Hub'), ('reply_to', 'Client_366'), ('sender', 'Client_366'), ('type', 'command')])\n",
+      "OrderedDict([('command', 'list connections by name'), ('correlation_id', '2017-01-31 19:20:01.962300'), ('message_id', '2017-01-31 19:20:01.962300'), ('need_result', True), ('receiver', 'Hub'), ('reply_to', 'Client_366'), ('sender', 'Client_366'), ('type', 'command')])\n",
       "\n",
       "\n",
-      "Data received: 400 bytes\n",
+      "Data received: 399 bytes\n",
       "Message:\n",
-      "OrderedDict([('correlation_id', '2017-01-29 21:57:01.066700'), ('message_id', '2017-01-29 21:57:01.149700'), ('receiver', 'Client_366'), ('reply_to', 'Hub'), ('result', {'NodeMCU_1dsc000': \"('192.168.0.104', 18507)\", 'NodeMCU_f1d30800': \"('192.168.0.103', 5703)\", 'Client_366': \"('192.168.0.105', 51426)\"}), ('sender', 'Hub'), ('time_stamp', '2017-01-29 21:57:01.149700'), ('type', 'result')])\n",
+      "OrderedDict([('correlation_id', '2017-01-31 19:20:01.962300'), ('message_id', '2017-01-31 19:20:02.050300'), ('receiver', 'Client_366'), ('reply_to', 'Hub'), ('result', {'NodeMCU_f1d30800': \"('192.168.0.103', 4592)\", 'NodeMCU_1dsc000': \"('192.168.0.101', 1857)\", 'Client_366': \"('192.168.0.100', 55493)\"}), ('sender', 'Hub'), ('time_stamp', '2017-01-31 19:20:02.050300'), ('type', 'result')])\n",
       "\n",
       "\n",
       "[____________ Connected nodes ____________]\n",
@@ -196,22 +202,122 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Read one GPIO pin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sending 314 bytes\n",
+      "Message:\n",
+      "OrderedDict([('command', 'read GPIOs'), ('correlation_id', '2017-01-31 19:21:02.747300'), ('kwargs', {'pins': (5, 12, 13, 14, 15, 16)}), ('message_id', '2017-01-31 19:21:02.747300'), ('need_result', True), ('receiver', 'Client_366'), ('reply_to', 'Client_366'), ('sender', 'Client_366'), ('type', 'command')])\n",
+      "\n",
+      "\n",
+      "Data received: 358 bytes\n",
+      "Message:\n",
+      "OrderedDict([('command', 'read GPIOs'), ('correlation_id', '2017-01-31 19:21:02.747300'), ('kwargs', {'pins': [5, 12, 13, 14, 15, 16]}), ('message_id', '2017-01-31 19:21:02.747300'), ('need_result', True), ('receiver', 'Client_366'), ('reply_to', 'Client_366'), ('sender', 'Client_366'), ('time_stamp', '2017-01-31 19:21:02.806300'), ('type', 'command')])\n",
+      "\n",
+      "\n",
+      "Processed result:\n",
+      "OrderedDict([('correlation_id', '2017-01-31 19:21:02.747300'), ('message_id', '2017-01-31 19:21:02.874300'), ('receiver', 'Client_366'), ('reply_to', 'Client_366'), ('sender', 'Client_366'), ('type', 'result')])\n",
+      "\n",
+      "Sending 222 bytes\n",
+      "Message:\n",
+      "OrderedDict([('correlation_id', '2017-01-31 19:21:02.747300'), ('message_id', '2017-01-31 19:21:02.874300'), ('receiver', 'Client_366'), ('reply_to', 'Client_366'), ('sender', 'Client_366'), ('type', 'result')])\n",
+      "\n",
+      "\n",
+      "Data received: 266 bytes\n",
+      "Message:\n",
+      "OrderedDict([('correlation_id', '2017-01-31 19:21:02.747300'), ('message_id', '2017-01-31 19:21:02.874300'), ('receiver', 'Client_366'), ('reply_to', 'Client_366'), ('sender', 'Client_366'), ('time_stamp', '2017-01-31 19:21:02.888300'), ('type', 'result')])\n",
+      "\n",
+      "\n",
+      "GPIO status for Client_366: None\n",
+      "\n",
+      "Sending 319 bytes\n",
+      "Message:\n",
+      "OrderedDict([('command', 'read GPIOs'), ('correlation_id', '2017-01-31 19:21:02.937300'), ('kwargs', {'pins': (5, 12, 13, 14, 15, 16)}), ('message_id', '2017-01-31 19:21:02.937300'), ('need_result', True), ('receiver', 'NodeMCU_1dsc000'), ('reply_to', 'Client_366'), ('sender', 'Client_366'), ('type', 'command')])\n",
+      "\n",
+      "\n",
+      "Data received: 321 bytes\n",
+      "Message:\n",
+      "OrderedDict([('correlation_id', '2017-01-31 19:21:02.937300'), ('message_id', '278602'), ('receiver', 'Client_366'), ('reply_to', 'NodeMCU_1dsc000'), ('result', [[5, 0], [12, 1], [13, 1], [14, 1], [15, 0], [16, 0]]), ('sender', 'NodeMCU_1dsc000'), ('time_stamp', '2017-01-31 19:21:03.396300'), ('type', 'result')])\n",
+      "\n",
+      "\n",
+      "GPIO status for NodeMCU_1dsc000: [[5, 0], [12, 1], [13, 1], [14, 1], [15, 0], [16, 0]]\n",
+      "\n",
+      "Sending 320 bytes\n",
+      "Message:\n",
+      "OrderedDict([('command', 'read GPIOs'), ('correlation_id', '2017-01-31 19:21:03.440300'), ('kwargs', {'pins': (5, 12, 13, 14, 15, 16)}), ('message_id', '2017-01-31 19:21:03.440300'), ('need_result', True), ('receiver', 'NodeMCU_f1d30800'), ('reply_to', 'Client_366'), ('sender', 'Client_366'), ('type', 'command')])\n",
+      "\n",
+      "\n",
+      "Data received: 325 bytes\n",
+      "Message:\n",
+      "OrderedDict([('correlation_id', '2017-01-31 19:21:03.440300'), ('message_id', '17637193'), ('receiver', 'Client_366'), ('reply_to', 'NodeMCU_f1d30800'), ('result', [[5, 0], [12, 1], [13, 1], [14, 1], [15, 0], [16, 1]]), ('sender', 'NodeMCU_f1d30800'), ('time_stamp', '2017-01-31 19:21:03.754300'), ('type', 'result')])\n",
+      "\n",
+      "\n",
+      "GPIO status for NodeMCU_f1d30800: [[5, 0], [12, 1], [13, 1], [14, 1], [15, 0], [16, 1]]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for remote_node in remote_nodes:\n",
+    "    _, result = the_client.request(remote_node, messages['read_GPIOs'] ) \n",
+    "    print('\\nGPIO status for {}: {}\\n'.format(remote_node, result.get()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Blink each node"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sending 329 bytes\n",
+      "Message:\n",
+      "OrderedDict([('command', 'blink led'), ('correlation_id', '2017-01-31 19:21:19.288300'), ('kwargs', {'on_seconds': 0.1, 'off_seconds': 0.1, 'forever': False, 'times': 10}), ('message_id', '2017-01-31 19:21:19.288300'), ('receiver', 'Client_366'), ('reply_to', 'Client_366'), ('sender', 'Client_366'), ('type', 'command')])\n",
+      "\n",
+      "Sending 334 bytes\n",
+      "Message:\n",
+      "OrderedDict([('command', 'blink led'), ('correlation_id', '2017-01-31 19:21:19.337300'), ('kwargs', {'on_seconds': 0.1, 'off_seconds': 0.1, 'forever': False, 'times': 10}), ('message_id', '2017-01-31 19:21:19.337300'), ('receiver', 'NodeMCU_1dsc000'), ('reply_to', 'Client_366'), ('sender', 'Client_366'), ('type', 'command')])\n",
+      "\n",
+      "\n",
+      "Data received: 373 bytes\n",
+      "Message:\n",
+      "OrderedDict([('command', 'blink led'), ('correlation_id', '2017-01-31 19:21:19.288300'), ('kwargs', {'on_seconds': 0.1, 'off_seconds': 0.1, 'forever': False, 'times': 10}), ('message_id', '2017-01-31 19:21:19.288300'), ('receiver', 'Client_366'), ('reply_to', 'Client_366'), ('sender', 'Client_366'), ('time_stamp', '2017-01-31 19:21:19.384300'), ('type', 'command')])\n",
+      "\n",
+      "Sending 335 bytes\n",
+      "Message:\n",
+      "OrderedDict([('command', 'blink led'), ('correlation_id', '2017-01-31 19:21:19.376300'), ('kwargs', {'on_seconds': 0.1, 'off_seconds': 0.1, 'forever': False, 'times': 10}), ('message_id', '2017-01-31 19:21:19.376300'), ('receiver', 'NodeMCU_f1d30800'), ('reply_to', 'Client_366'), ('sender', 'Client_366'), ('type', 'command')])\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# remote_node = 'NodeMCU_|edca00'\n",
     "# the_client.request(remote_node, messages['blink_led']) \n",
     "\n",
-    "# for remote_node in remote_nodes:\n",
-    "#     the_client.request(remote_node, messages['blink_led']) "
+    "for remote_node in remote_nodes:\n",
+    "    the_client.request(remote_node, messages['blink_led']) "
    ]
   },
   {
@@ -223,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -235,21 +341,31 @@
       "\n",
       "[______________ Sending messages ______________]\n",
       "\n",
-      "Sending 274 bytes\n",
+      "Sending 319 bytes\n",
       "Message:\n",
-      "OrderedDict([('command', 'read GPIOs'), ('correlation_id', '2017-01-29 21:57:01.378700'), ('message_id', '2017-01-29 21:57:01.378700'), ('need_result', True), ('receiver', 'NodeMCU_1dsc000'), ('reply_to', 'Client_366'), ('sender', 'Client_366'), ('type', 'command')])\n",
+      "OrderedDict([('command', 'read GPIOs'), ('correlation_id', '2017-01-31 19:21:27.266300'), ('kwargs', {'pins': (5, 12, 13, 14, 15, 16)}), ('message_id', '2017-01-31 19:21:27.266300'), ('need_result', True), ('receiver', 'NodeMCU_1dsc000'), ('reply_to', 'Client_366'), ('sender', 'Client_366'), ('type', 'command')])\n",
       "\n",
-      "Sending 275 bytes\n",
+      "Sending 320 bytes\n",
       "Message:\n",
-      "OrderedDict([('command', 'read GPIOs'), ('correlation_id', '2017-01-29 21:57:01.413700'), ('message_id', '2017-01-29 21:57:01.413700'), ('need_result', True), ('receiver', 'NodeMCU_f1d30800'), ('reply_to', 'Client_366'), ('sender', 'Client_366'), ('type', 'command')])\n",
+      "OrderedDict([('command', 'read GPIOs'), ('correlation_id', '2017-01-31 19:21:27.312300'), ('kwargs', {'pins': (5, 12, 13, 14, 15, 16)}), ('message_id', '2017-01-31 19:21:27.312300'), ('need_result', True), ('receiver', 'NodeMCU_f1d30800'), ('reply_to', 'Client_366'), ('sender', 'Client_366'), ('type', 'command')])\n",
       "\n",
       "Sending 334 bytes\n",
       "Message:\n",
-      "OrderedDict([('command', 'blink led'), ('correlation_id', '2017-01-29 21:57:01.457700'), ('kwargs', {'times': 10, 'on_seconds': 0.1, 'forever': False, 'off_seconds': 0.1}), ('message_id', '2017-01-29 21:57:01.457700'), ('receiver', 'NodeMCU_1dsc000'), ('reply_to', 'Client_366'), ('sender', 'Client_366'), ('type', 'command')])\n",
+      "OrderedDict([('command', 'blink led'), ('correlation_id', '2017-01-31 19:21:27.346300'), ('kwargs', {'on_seconds': 0.1, 'off_seconds': 0.1, 'forever': False, 'times': 10}), ('message_id', '2017-01-31 19:21:27.346300'), ('receiver', 'NodeMCU_1dsc000'), ('reply_to', 'Client_366'), ('sender', 'Client_366'), ('type', 'command')])\n",
       "\n",
       "Sending 335 bytes\n",
       "Message:\n",
-      "OrderedDict([('command', 'blink led'), ('correlation_id', '2017-01-29 21:57:01.503700'), ('kwargs', {'times': 10, 'on_seconds': 0.1, 'forever': False, 'off_seconds': 0.1}), ('message_id', '2017-01-29 21:57:01.503700'), ('receiver', 'NodeMCU_f1d30800'), ('reply_to', 'Client_366'), ('sender', 'Client_366'), ('type', 'command')])\n",
+      "OrderedDict([('command', 'blink led'), ('correlation_id', '2017-01-31 19:21:27.385300'), ('kwargs', {'on_seconds': 0.1, 'off_seconds': 0.1, 'forever': False, 'times': 10}), ('message_id', '2017-01-31 19:21:27.385300'), ('receiver', 'NodeMCU_f1d30800'), ('reply_to', 'Client_366'), ('sender', 'Client_366'), ('type', 'command')])\n",
+      "\n",
+      "\n",
+      "Data received: 325 bytes\n",
+      "Message:\n",
+      "OrderedDict([('correlation_id', '2017-01-31 19:21:27.312300'), ('message_id', '17661057'), ('receiver', 'Client_366'), ('reply_to', 'NodeMCU_f1d30800'), ('result', [[5, 0], [12, 1], [13, 1], [14, 1], [15, 0], [16, 1]]), ('sender', 'NodeMCU_f1d30800'), ('time_stamp', '2017-01-31 19:21:27.586300'), ('type', 'result')])\n",
+      "\n",
+      "\n",
+      "Data received: 321 bytes\n",
+      "Message:\n",
+      "OrderedDict([('correlation_id', '2017-01-31 19:21:27.266300'), ('message_id', '302896'), ('receiver', 'Client_366'), ('reply_to', 'NodeMCU_1dsc000'), ('result', [[5, 0], [12, 1], [13, 1], [14, 1], [15, 0], [16, 0]]), ('sender', 'NodeMCU_1dsc000'), ('time_stamp', '2017-01-31 19:21:27.656300'), ('type', 'result')])\n",
       "\n"
      ]
     }
@@ -276,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -289,26 +405,16 @@
       "[_________ Wait few seconds for reply _________]\n",
       "\n",
       "\n",
-      "Data received: 320 bytes\n",
-      "Message:\n",
-      "OrderedDict([('correlation_id', '2017-01-29 21:57:01.378700'), ('message_id', '46340'), ('receiver', 'Client_366'), ('reply_to', 'NodeMCU_1dsc000'), ('result', [[5, 1], [12, 1], [13, 1], [14, 1], [15, 0], [16, 0]]), ('sender', 'NodeMCU_1dsc000'), ('time_stamp', '2017-01-29 21:57:01.667700'), ('type', 'result')])\n",
-      "\n",
-      "\n",
       "[Result for request]:\n",
       "___Request___:\n",
-      "{'sender': 'Client_366', 'message_id': '2017-01-29 21:57:01.378700', 'correlation_id': '2017-01-29 21:57:01.378700', 'need_result': True, 'reply_to': 'Client_366', 'command': 'read GPIOs', 'type': 'command', 'receiver': 'NodeMCU_1dsc000'}\n",
+      "{'sender': 'Client_366', 'kwargs': {'pins': (5, 12, 13, 14, 15, 16)}, 'correlation_id': '2017-01-31 19:21:27.266300', 'type': 'command', 'reply_to': 'Client_366', 'message_id': '2017-01-31 19:21:27.266300', 'need_result': True, 'receiver': 'NodeMCU_1dsc000', 'command': 'read GPIOs'}\n",
       "___Result____:\n",
-      "[[5, 1], [12, 1], [13, 1], [14, 1], [15, 0], [16, 0]]\n",
-      "\n",
-      "\n",
-      "Data received: 323 bytes\n",
-      "Message:\n",
-      "OrderedDict([('correlation_id', '2017-01-29 21:57:01.413700'), ('message_id', '225576'), ('receiver', 'Client_366'), ('reply_to', 'NodeMCU_f1d30800'), ('result', [[5, 0], [12, 1], [13, 1], [14, 1], [15, 0], [16, 1]]), ('sender', 'NodeMCU_f1d30800'), ('time_stamp', '2017-01-29 21:57:01.722700'), ('type', 'result')])\n",
+      "[[5, 0], [12, 1], [13, 1], [14, 1], [15, 0], [16, 0]]\n",
       "\n",
       "\n",
       "[Result for request]:\n",
       "___Request___:\n",
-      "{'sender': 'Client_366', 'message_id': '2017-01-29 21:57:01.413700', 'correlation_id': '2017-01-29 21:57:01.413700', 'need_result': True, 'reply_to': 'Client_366', 'command': 'read GPIOs', 'type': 'command', 'receiver': 'NodeMCU_f1d30800'}\n",
+      "{'sender': 'Client_366', 'kwargs': {'pins': (5, 12, 13, 14, 15, 16)}, 'correlation_id': '2017-01-31 19:21:27.312300', 'type': 'command', 'reply_to': 'Client_366', 'message_id': '2017-01-31 19:21:27.312300', 'need_result': True, 'receiver': 'NodeMCU_f1d30800', 'command': 'read GPIOs'}\n",
       "___Result____:\n",
       "[[5, 0], [12, 1], [13, 1], [14, 1], [15, 0], [16, 1]]\n",
       "\n"
@@ -336,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -357,15 +463,6 @@
     "the_client = None\n",
     "print ('\\n[________________ Demo stopped ________________]\\n')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
