Fix async result bugs.

--- a/notebooks/上傳檔案到 NodeMCU (Upload files to NodeMCU).ipynb
+++ b/notebooks/上傳檔案到 NodeMCU (Upload files to NodeMCU).ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -223,12 +223,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Copying node.py\n"
+      "Copying worker.py\n"
      ]
     }
    ],
    "source": [
-    "copy_one_file('..\\\\codes\\\\node', 'node.py')"
+    "copy_one_file('..\\\\codes\\\\node', 'worker.py')"
    ]
   },
   {
